--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = 6\n",
-    "x = ['Crime/Mystery']\n",
+    "x = ['Crime/Mystery', 'Sci Fi', 'Drama'' ]\n",
     "labels = None\n",
     "\n",
     "# Set a figure size\n",
