--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "y = [40, 30, 10, 50, 25, 5]\n",
     "x = ['Crime/Mystery', 'Sci Fi', 'Drama', 'Comedy', 'Action', 'Documentary']\n",
-    "labels = 'Jim'\n",
+    "labels = 'Jim\\'s\n",
     "\n",
     "# Set a figure size\n",
     "plt.figure(figsize=(8,6))\n",
