--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
     "# Set a figure size\n",
     "plt.figure(figsize=(8,6))\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
-    "plt.bar\n",
+    "plt.bar(x, y, label= labels)\n",
     "# Give a title to the bar graph\n",
     "\n",
     "# Output the final plot\n"
