--- a/index.ipynb
+++ b/index.ipynb
@@ -45,6 +45,8 @@
     "plt.figure(figsize=(8,6))\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "plt.bar(x, y, label= 'Number of Movies')\n",
+    "\n",
+    "ply.\n",
     "# Give a title to the bar graph\n",
     "\n",
     "# Output the final plot\n"
