--- a/index.ipynb
+++ b/index.ipynb
@@ -46,7 +46,8 @@
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "plt.bar(x, y, label= 'Number of Movies')\n",
     "\n",
-    "ply.xlabel()\n",
+    "ply.xlabel('Genre')\n",
+    "plt.\n",
     "# Give a title to the bar graph\n",
     "\n",
     "# Output the final plot\n"
