Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
     "plt.bar(x, y, label= 'Number of Movies')\n",
     "\n",
     "ply.xlabel('Genre')\n",
-    "plt.\n",
+    "plt.ylabel('Number')\n",
     "# Give a title to the bar graph\n",
     "\n",
     "# Output the final plot\n"
