Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,9 +47,9 @@
     "plt.bar(x, y, label= 'Number of Movies')\n",
     "\n",
     "ply.xlabel('Genre')\n",
-    "plt.ylabel('Number')\n",
+    "plt.ylabel('Number of Movies')\n",
     "# Give a title to the bar graph\n",
-    "\n",
+    "plt.title\n",
     "# Output the final plot\n"
    ]
   },
