Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
     "ply.xlabel('Genre')\n",
     "plt.ylabel('Number of Movies')\n",
     "# Give a title to the bar graph\n",
-    "plt.title\n",
+    "plt.title()\n",
     "# Output the final plot\n"
    ]
   },
