Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,6 +71,7 @@
     "\n",
     "plt.xlabel('Genre')\n",
     "plt.ylabel('Number of Movies')\n",
+    "plt.legend\n",
     "# Give a title to the bar graph\n",
     "plt.title(labels)\n",
     "# Output the final plot\n"
