Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
     "# Set the figure size in inches\n",
     "plt.figure(figsize(10,10))\n",
     "# Plot with scatter()\n",
-    "plt.scatter(weight, mpg)\n",
+    "plt.scatter(weight, mpg, label= 'MPG')\n",
     "\n",
     "# Set x and y axes labels and give titles\n"
    ]
