--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,8 @@
     "# Plot with scatter()\n",
     "plt.scatter(weight, mpg, label= 'MPG')\n",
     "\n",
-    "# Set x and y axes labels and give titles\n"
+    "# Set x and y axes labels and give titles\n",
+    "plt.xlabel()"
    ]
   },
   {
