Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,8 @@
     "plt.scatter(weight, mpg, label= 'MPG')\n",
     "\n",
     "# Set x and y axes labels and give titles\n",
-    "plt.xlabel()"
+    "plt.xlabel('Weight of Car')\n",
+    "plt.y"
    ]
   },
   {
