Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,8 @@
     "\n",
     "# Set x and y axes labels and give titles\n",
     "plt.xlabel('Weight of Car')\n",
-    "plt.y"
+    "plt.ylabel('MPG')\n",
+    "plt."
    ]
   },
   {
