--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "# Set x and y axes labels and give titles\n",
     "plt.xlabel('Weight of Car')\n",
     "plt.ylabel('MPG')\n",
-    "plt.title('')"
+    "plt.title('Gas Mileage ')"
    ]
   },
   {
