Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
     "#Plot the distogram with hist() function\n",
     "plt.hist(x, bins = 5)\n",
     "# Label, give title and show the plot\n",
-    "plt."
+    "plt.xlabel('Wait Times')"
    ]
   },
   {
