Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,8 @@
     "plt.hist(x, bins = 5)\n",
     "# Label, give title and show the plot\n",
     "plt.xlabel('Wait Times')\n",
-    "plt.ylabel('P')"
+    "plt.ylabel('People Waiting')\n",
+    "plt.Ti"
    ]
   },
   {
