Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,7 @@
     "# Label, give title and show the plot\n",
     "plt.xlabel('Wait Times')\n",
     "plt.ylabel('People Waiting')\n",
-    "plt.Ti"
+    "plt.title('Wait times per')"
    ]
   },
   {
