Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
     "# Label, give title and show the plot\n",
     "plt.xlabel('Wait Times')\n",
     "plt.ylabel('People Waiting')\n",
-    "plt.title('Wait times per')"
+    "plt.title('Wait times per customer')\n",
+    "plt."
    ]
   },
   {
